[package]
name = "iobuffer"
version = "0.2.0"
authors = ["Metaswitch Networks Ltd"]
license = "Apache-2.0"
description = "A simple memory-based buffer for IO reading and writing"
homepage = "https://github.com/Metaswitch/iobuffer"
repository = "https://github.com/Metaswitch/iobuffer"
readme = "README.md"
keywords = ["io", "buffer", "iobuffer"]

[dependencies]
